# miramind

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  FASTAPI_README.md  README — kopia.md  README.md  chatbot.py  emotion_log.json  emotion_result.json  environment.yaml  example-env  main.py  miramind.md  package-lock.json  pydoc-markdown.yml  pyproject.toml  requirements.txt  run_chat.py  run_server.py
.github/workflows/: ci.yml
app/: page.js
app/call/: page.js
docs/: index.html  miramind.html  search.js
docs/miramind/: audio.html  llm.html  shared.html
docs/miramind/audio/: stt.html  tts.html
docs/miramind/audio/stt/: consts.html  loggers.html  stt_class.html  stt_stream.html  stt_threads.html
docs/miramind/audio/tts/: tts_azure.html  tts_base.html  tts_factory.html
docs/miramind/shared/: azure_utils.html  logger.html  utils.html
emotion_classifier/: emotion_classifier.py  emotion_core.py
nodes/: nodes.py
src/: emotion_log.json  sessions_log.json  setup.py
src/miramind/api/: const.py  emotion_log.json  main.py
src/miramind/audio/stt/: linear_stt.py  loggers.py  stt_class.py  stt_stream.py  stt_threads.py
src/miramind/audio/tts/: factory.py  tts_azure.py  tts_base.py  tts_factory.py
src/miramind/frontend/: bun.lockb  components.json  emotion_log.json  input.txt  package.json
src/miramind/frontend/app/: page.js  page.jsx
src/miramind/frontend/app/api/chat/: route.js
src/miramind/frontend/app/api/chat/message/: route.js
src/miramind/frontend/app/api/chat/start/: route.js
src/miramind/frontend/app/call/: page.js  page.jsx  view.js
src/miramind/frontend/components/call/: AudioControls.jsx  AudioVisualizer.jsx  BotResponse.jsx  ChatHistory.jsx  EndCallButton.jsx  LoadingIndicator.jsx  ModeToggle.jsx  StartCallScreen.jsx  TextInput.jsx  VoiceInput.jsx  index.js
src/miramind/frontend/hooks/: useAudio.js  useVoiceRecording.js
src/miramind/frontend/lib/: audioUtils.js
src/miramind/llm/langgraph/: chatbot.py  performance_config.py  performance_monitor.py  run_chat.py  subgraphs.py  utils.py
src/miramind/shared/: __init__.py  azure.py  azure_utils.py  logger.py  utils.py
src/miramind/stt/: __init__.py  consts.py  loggers.py  stt.py  stt_class.py  stt_rec_stream.py  stt_stream.py  sttstream.py
src/scripts/downloader/: __init__.py  ytd.py
story_templates/: story_templates.json  story_templates_usage.py
tests/miramind/shared/: test_utils.py
tests/miramind/stt/: test_stt_class.py  test_stt_stream.py
tests/resources/test-inputs/: test-input-2.txt  test-input-3.txt  test-input-4.txt  test-input-6.txt
tests/stt/: downloader.py
tests/test-inputs/: test-input-1.txt  test-input-2.txt  test-input-3.txt  test-input-4.txt  test-input-5.txt  test-input-6.txt
tests/test_api/: conftest.py  run_api_tests.py  test_api.py  test_static.py  validate_setup.py
tests/test_llm/: README.md  conftest.py  requirements-test.txt  run_tests.py  test_chatbot.py  test_integration.py  test_performance_config.py  test_performance_monitor.py  test_run_chat.py  test_subgraphs.py  test_utils.py
tests/test_miramind/test_audio/test_stt/: test_stt_class.py  test_stt_stream.py  test_threads.py
tests/test_miramind/test_audio/test_tts/: test_tts_base.py  test_tts_factory.py  test_tts_integration.py  test_tts_real_api.py
tests/test_miramind/test_shared/: test_azure.py  test_utils.py
