[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miramind"
version = "0.1.0"
description = "Virtual companion for neurodivergent children"
authors = [
    {name = "Marcel Musiałek"},
    {name = "Mikolaj Marsy"},
    {name = "Adam Kołacz"},
]

readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "openai",
    "pytubefix"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "black>=23.0.0",
    "pre-commit",
]

# CLI entry point (if you want a command-line tool)
# [project.scripts]
# quiz = "quiz.main:main"