[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miramind"
version = "0.1.0"
description = "Virtual companion for neurodivergent children"
authors = [
    {name = "Marcel Musiałek"},
    {name = "Mikolaj Marsy"},
    {name = "Adam Kołacz"},
]

readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "openai",
    "pytubefix",
    "azure-cognitiveservices-speech>=1.34.0",
    "pytest"
    "sounddevice",
    "scipy",
    "soundfile"
]

[tool.setuptools.packages.find]
where = ["src/miramind",
         "src/scripts"]

[project.optional-dependencies]
dev = [
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pre-commit",
]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["miramind"]

# CLI entry point (if you want a command-line tool)
[project.scripts]
ytd = "downloader:main"
