[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miramind"
version = "0.1.0"
description = "Virtual companion for neurodivergent children"
authors = [
    {name = "Marcel Musiałek"},
    {name = "Mikolaj Marsy"},
    {name = "Adam Kołacz"},
]

readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "openai",
    "pytubefix",
    "sounddevice",
    "scipy",
    "soundfile",
    "azure-cognitiveservices-speech>=1.34.0",
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pytest-env",
    "pytest-mock",
    "azure-storage-blob"
]

[tool.setuptools.packages.find]
where = [
    "src"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pre-commit",
]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["miramind"]

# pytest env setup
[tool.pytest_env]
    AZURE_OPENAI_API_KEY = {value = "YOUR KEY", skip_if_set = true}
    AZURE_OPENAI_ENDPOINT_URL = {value = "YOUR ENDPOINT", skip_if_set = true}
    AZURE_OPENAI_API_VERSION = {value = "2024-12-01-preview", skip_if_set = true}

    #AZURE SPEECH
    #AZURE_SPEECH_VOICE_NAME = {value = "en-US-JennyNeural", skip_if_set = true}
    #AZURE_SPEECH_ENDPOINT = {value = "https://YOURRESURCE.cognitiveservices.azure.com/", skip_if_set = true}
    #AZURE_SPEECH_KEY = {value = "YOUR KEY", skip_if_set = true}

    #PROJECT DIRS
    TESTS_DIR = {value = "~/tests", skip_if_set = true}
    LOGS_DIR = {value = "~/logs", skip_if_set = true}
    MIRAMIND_TEMP = {value = "~/temp", skip_if_set = true}

    #MODEL DEPLOYMENTS
    STT_MODEL = {value = "gpt-4o-transcribe", skip_if_set = true}
    LANGUAGE_DETECTION_DEPLOYMENT = {value = "o4-mini", skip_if_set = true}

    #BLOB STORAGE
    BLOB_STORAGE_CONNECTION_STRING = {value = "YOUR CONNECTION STRING", skip_if_set = true}

# CLI entry point (if you want a command-line tool)
[project.scripts]
ytd = "scripts.downloader.ytd:main"
